--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "auto-changelog": "^2.5.0",
     "db-migrate": "^0.11.14",
     "db-migrate-mysql": "^3.0.0",
+    "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
     "semistandard": "^17.0.0"
   },
   "dependencies": {
     "adhisimon-logger": "^1.0.5",
     "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mysql-client-w-metrics": "^0.1.5"
+    "express-basic-auth": "^1.2.1",
+    "mysql-client-w-metrics": "^0.1.5",
+    "uniqid": "^5.4.0"
   }
 }
