--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^5.1.0",
     "express-basic-auth": "^1.2.1",
     "mysql-client-w-metrics": "^0.1.5",
+    "simple-git": "^3.28.0",
     "uniqid": "^5.4.0"
   }
 }
