--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
     "mysql-client-w-metrics": "^0.1.5",
     "simple-git": "^3.28.0",
     "uniqid": "^5.4.0"
