WEBUI_TRUST_PROXY

--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
 WEBUI_LISTEN_PORT=11280
 WEBUI_BASE_URL=
+WEBUI_TRUST_PROXY=loopback
 
 MYSQL_SOCKET_PATH="/var/lib/mysql/mysql.sock"
 MYSQL_HOST="localhost"
