--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "LOG_LEVEL=debug nodemon index.mjs",
     "start": "npm run schema-update && NODE_ENV=production node index.mjs",
     "build-container": "podman build -t ghcr.io/tektrans/ejabberd-admin-wrapper:latest .",
+    "publish-container": "podman push ghcr.io/tektrans/ejabberd-admin-wrapper:latest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
