More descriptive at README.md

--- a/example.env
+++ b/example.env
@@ -1,14 +1,24 @@
 WEBUI_LISTEN_PORT=11280
 WEBUI_BASE_URL=
-WEBUI_TRUST_PROXY=loopback
 
-MYSQL_SOCKET_PATH="/var/lib/mysql/mysql.sock"
-MYSQL_HOST="localhost"
+# List ip reverse-proxy jika ada.
+# Bisa diisi dengan alamat ip atau konstan seperti trust proxy di express: loopback, linklocal, atau uniquelocal
+# Lihat https://expressjs.com/en/5x/api.html#trust.proxy.options.table
+# 
+# Pisahkan dengan koma jika terdapat beberapa ip reverse-proxy.
+WEBUI_TRUST_PROXY=
+
+# Kosongkan MYSQL_SOCKET_PATH jika anda tidak ingin berkomunikasi dengan MySQL melalui socket file.
+MYSQL_SOCKET_PATH=/var/lib/mysql/mysql.sock
+
+# MYSQL_HOST dan MYSQL_PORT akan diabaikan jika MYSQL_SOCKET_PATH berisi suatu nilai
+MYSQL_HOST=localhost
 MYSQL_PORT=3306
-MYSQL_DATABASE="ejabberd-admin"
-MYSQL_USER="ejabberd-admin"
-MYSQL_PASSWORD="PLEASE_CHANGE_ME"
 
-EJABBERD_ADMIN_USERNAME="user@domain"
-EJABBERD_ADMIN_PASSWORD="PLEASE_CHANGE_ME"
-EJABBERD_API_BASE_URL="https://localhost:5443"
+MYSQL_DATABASE=ejabberd-admin
+MYSQL_USER=ejabberd-admin
+MYSQL_PASSWORD=secret
+
+EJABBERD_ADMIN_USERNAME=admin@example.com
+EJABBERD_ADMIN_PASSWORD=PLEASE_CHANGE_ME
+EJABBERD_API_BASE_URL=https://localhost:5443
