--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "schema-update": "db-migrate up",
     "dev": "LOG_LEVEL=debug nodemon index.mjs",
     "start": "npm run schema-update && NODE_ENV=production node index.mjs",
-    "build-container": "npm run dump-version ; podman build --build-arg APP_VERSION=`cat version.txt` -t ghcr.io/tektrans/ejabberd-admin-wrapper:latest .",
+    "build-container": "npm run dump-version ; podman build --pull=newer --build-arg APP_VERSION=`cat version.txt` -t ghcr.io/tektrans/ejabberd-admin-wrapper:latest .",
     "publish-container": "podman push ghcr.io/tektrans/ejabberd-admin-wrapper:latest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
